2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* support Grab Existential Variables
	* display several layers with several proof trees each
	* protocol change, but stay at version 3
	* new config file version 04

2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* differentiate proof complete message according to
	  extistential status

2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* doc fixes

2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix paragraphs in help window

2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* support for bullets and braces
	* protocol change to version 3
	  - change proof-finished into branch-finished and adapt
	    its meaning
	* introduce proof-tree states without current sequent and
	  permit navigation commands without current sequent

2013-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix surviver reuse bug introduced yesterday

2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve positioning: make parents and new siblings visible

2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix assertion when undo states are incorrect because of
	  insertions

2012-09-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* die with a sensible message in case Proof is missing
	* polish man page and add limitations section

2012-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix clone deletes primary window problem

2012-07-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix an embarrassing control flow bug in input.ml

2012-05-14  Hendrik Tews <prooftree@askra.de>

	* release version 0.10 on 2012-05-14 21:11:13 UTC

2012-05-14  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* more debian packaging fixes

2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* prepare release
	* adjust debian stuff

2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
