@@ -1,5 +1,9 @@
 2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* integrate new config values in configuration dialog
+
+2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* support Grab Existential Variables
 	* display several layers with several proof trees each
 	* protocol change, but stay at version 3
